# ondewo-nlu-client-python

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pypi  Dockerfile.utils  Jenkinsfile  Makefile  README.md  RELEASE.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  temporary.txt  test_pb_files
.github/workflows/: tests.yml
envs/: example.json  versions.env
examples/: environment.env.template  example_env.py
examples/agents/: async_create_agent.py  clean_polluted_annotations.py  create_agent.py  create_agent_with_ssl.py  create_and_use_project_technical_user.py  export_agent.py  full_text_search.py  get_agent_statistics.py  import_agent.py  restore_agent.py  train_agent.py
examples/dockerfiles/: docker-compose.yaml  export-agents.Dockerfile
examples/entities/: update_entity_type.py
examples/export/: export.py
examples/intents/: check_expiring_intents.py  create_intent.py  create_intents_from_jsons.py  save_intents_to_json.py
examples/interactions/: detect_intent.py  detect_intent_with_context.py  full_conversation_demo.py  nlu_client.py  single_interaction.py
examples/qa/: get_answer.py
examples/sessions/: detect_intent_keycloak.py  streaming_detect_intent.py
ondewo/: __init__.py
ondewo-nlu-api/: LICENSE  README.md  RELEASE.md
ondewo-nlu-api/ondewo/nlu/: agent.proto  entity_type.proto  intent.proto  operation_metadata.proto
ondewo/nlu/: README.md  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  aiservices_pb2.py  aiservices_pb2.pyi  aiservices_pb2_grpc.py  async_client.py  ccai_project_pb2.py  ccai_project_pb2.pyi  ccai_project_pb2_grpc.py  client.py  client_config.py  client_pool.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  context_pb2.py  context_pb2.pyi  context_pb2_grpc.py  entity_type_pb2.py  entity_type_pb2.pyi  entity_type_pb2_grpc.py  intent_pb2.py  intent_pb2.pyi  intent_pb2_grpc.py  llm_evaluation_pb2.py  llm_evaluation_pb2.pyi  llm_evaluation_pb2_grpc.py  operation_metadata_pb2.py  operation_metadata_pb2.pyi  operation_metadata_pb2_grpc.py  operations_pb2.py  operations_pb2.pyi  operations_pb2_grpc.py  project_role_pb2.py  project_role_pb2.pyi  project_role_pb2_grpc.py  project_statistics_pb2.py  project_statistics_pb2.pyi  (+22 more)
ondewo/nlu/convenience/: shared_request_data.py
ondewo/nlu/core/: async_services_container.py  async_services_interface.py  services_container.py  services_interface.py
ondewo/nlu/scripts/: client_example_script.py  generate_services.py
ondewo/nlu/services/: agents.py  aiservices.py  async_agents.py  async_aiservices.py  async_ccai_projects.py  async_contexts.py  async_entity_types.py  async_intents.py  async_llm_evaluations.py  async_operations.py  async_project_roles.py  async_project_statistics.py  async_rags.py  async_server_statistics.py  async_sessions.py  async_users.py  async_utilities.py  async_webhooks.py  ccai_project.py  ccai_project_services.py  ccai_projects.py  contexts.py  entity_types.py  intents.py  llm_evaluations.py  operations.py  project_roles.py  project_statistics.py  rags.py  server_statistics.py  sessions.py  users.py  utilities.py  webhooks.py
ondewo/nlu/utils/: async_login.py  keycloak.py  login.py
ondewo/qa/: client.py  client_config.py  qa_pb2.py  qa_pb2.pyi  qa_pb2_grpc.py
ondewo/qa/core/: async_services_interface.py  services_container.py  services_interface.py
ondewo/qa/services/: async_qa.py  qa.py
ondewo/utils/: base_client.py  base_client_config.py  base_service_container.py  base_services_interface.py  helpers.py  text.py
tests/unit/: test_client_pool.py
tests/unit/convenience/: test_shared_request_data.py
tests/unit/core/: conftest.py  test_auth_wiring.py  test_client_wiring.py  test_services_surface.py
tests/unit/examples/: test_detect_intent_keycloak.py  test_example_env_tls.py  test_examples_compile.py
tests/unit/qa/: test_qa_client.py
tests/unit/scripts/: test_client_example_script.py  test_generate_services.py
tests/unit/utils/: test_client_config.py  test_keycloak.py
