[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ondewo-nlu-client"
version = "6.14.0"
description = "ONDEWO Natural Language Understanding (NLU) Client library for Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ONDEWO GmbH", email = "office@ondewo.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "dataclasses-json",
    "google-api-core",
    "grpcio",
    "grpcio-reflection",
    "grpcio-tools",
    "loguru",
    "ondewo-client-utils>=3.2.0",
    "polling",
    "protobuf",
    "python-dateutil",
    "regex",
    "requests",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "Faker",
    "ruff",
    "mypy",
    "mypy-protobuf",
    "protobuf",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "tqdm",
    "types-protobuf",
    "types-requests",
    "types-tqdm",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/ondewo/ondewo-nlu-client-python"
Repository = "https://github.com/ondewo/ondewo-nlu-client-python"

# ---------------------------------------------------------------------------
# setuptools: package discovery + package data
# Equivalent to the old setup.py:
#   packages = [n for n in find_packages() if n == 'ondewo' or n.startswith('ondewo.')]
#   include_package_data=True + package_data for py.typed / *.pyi
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["ondewo", "ondewo.*"]

[tool.setuptools.package-data]
"ondewo.nlu" = ["py.typed", "*.pyi"]
"ondewo.qa" = ["py.typed", "*.pyi"]

# ---------------------------------------------------------------------------
# Ruff  (replaces flake8: ignore C901,W504; max-line-length 120; exclude *_pb2*)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py39"
# Never lint/format the generated protobuf/gRPC stubs (the old .flake8 excluded
# every ondewo/**/*_pb2*.py / .pyi individually).
extend-exclude = [
    "*_pb2.py",
    "*_pb2.pyi",
    "*_pb2_grpc.py",
    "ondewo-nlu-api",
    "ondewo-proto-compiler",
]

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F) == the flake8 default rule set.
# C901 (mccabe complexity) is intentionally NOT enabled -> old "ignore = C901".
# W503/W504 (line break around binary operator) are not implemented by ruff,
# so the old "ignore = W504" is a no-op here.
select = ["E", "F", "W"]
ignore = []

[tool.ruff.format]
# Supersedes the old black (async_ files) + autopep8 hooks.
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy  (translated faithfully from mypy.ini)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_errors = false
ignore_missing_imports = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_traceback = true
warn_no_return = true
warn_return_any = true
warn_unused_configs = true

# Generated protobuf / gRPC stubs: never type-check them.
[[tool.mypy.overrides]]
module = [
    "ondewo.nlu.agent_pb2",
    "ondewo.nlu.agent_pb2_grpc",
    "ondewo.nlu.aiservices_pb2",
    "ondewo.nlu.aiservices_pb2_grpc",
    "ondewo.nlu.ccai_project_pb2",
    "ondewo.nlu.ccai_project_pb2_grpc",
    "ondewo.nlu.common_pb2",
    "ondewo.nlu.common_pb2_grpc",
    "ondewo.nlu.context_pb2",
    "ondewo.nlu.context_pb2_grpc",
    "ondewo.nlu.entity_type_pb2",
    "ondewo.nlu.entity_type_pb2_grpc",
    "ondewo.nlu.intent_pb2",
    "ondewo.nlu.intent_pb2_grpc",
    "ondewo.nlu.llm_evaluation_pb2",
    "ondewo.nlu.llm_evaluation_pb2_grpc",
    "ondewo.nlu.operation_metadata_pb2",
    "ondewo.nlu.operation_metadata_pb2_grpc",
    "ondewo.nlu.operations_pb2",
    "ondewo.nlu.operations_pb2_grpc",
    "ondewo.nlu.project_role_pb2",
    "ondewo.nlu.project_role_pb2_grpc",
    "ondewo.nlu.project_statistics_pb2",
    "ondewo.nlu.project_statistics_pb2_grpc",
    "ondewo.nlu.rag_pb2",
    "ondewo.nlu.rag_pb2_grpc",
    "ondewo.nlu.server_statistics_pb2",
    "ondewo.nlu.server_statistics_pb2_grpc",
    "ondewo.nlu.session_pb2",
    "ondewo.nlu.session_pb2_grpc",
    "ondewo.nlu.user_pb2",
    "ondewo.nlu.user_pb2_grpc",
    "ondewo.nlu.utility_pb2",
    "ondewo.nlu.utility_pb2_grpc",
    "ondewo.nlu.webhook_pb2",
    "ondewo.nlu.webhook_pb2_grpc",
    "ondewo.qa.qa_pb2",
    "ondewo.qa.qa_pb2_grpc",
]
ignore_errors = true
ignore_missing_imports = true

# Third-party packages without (complete) type stubs.
[[tool.mypy.overrides]]
module = [
    "loguru.*",
    "ondewo.utils.*",
    # Pre-existing repo bug: `make create_async_services` generates the async
    # services-interface for ondewo.nlu.core but NOT for ondewo.qa.core, so the
    # generated ondewo/qa/services/async_qa.py imports a module that does not
    # exist. Silence the missing import here; the team should fix the generator.
    "ondewo.qa.core.async_services_interface",
    "faker.*",
    "google.longrunning.*",
    "google.protobuf.*",
    "grpc.*",
    "polling.*",
    "regex.*",
    "setuptools.*",
    "tqdm.*",
]
ignore_missing_imports = true