[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ondewo-nlu-client"
version = "7.0.0"
description = "ONDEWO Natural Language Understanding (NLU) Client library for Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ONDEWO GmbH", email = "office@ondewo.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "google-api-core",
    "grpcio",
    "loguru",
    # >=3.3.0 is what finally drops the dataclasses-json -> marshmallow chain (BaseClientConfig implements
    # to_dict/from_dict/to_json/from_json itself). 3.2.0 still supplies those helpers via @dataclass_json, so
    # this package works on both -- raise the floor to >=3.3.0 once client-utils 3.3.0 is on PyPI.
    "ondewo-client-utils>=3.2.0",
    "polling",
    "protobuf",
    "requests",
]

[project.optional-dependencies]
dev = [
    "Faker",
    "ruff",
    "mypy",
    "mypy-protobuf",
    "pre-commit",
    "protobuf",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "tqdm",
    "types-protobuf",
    "types-requests",
    "types-tqdm",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/ondewo/ondewo-nlu-client-python"
Repository = "https://github.com/ondewo/ondewo-nlu-client-python"

# ---------------------------------------------------------------------------
# setuptools: package discovery + package data
# Equivalent to the old setup.py:
#   packages = [n for n in find_packages() if n == 'ondewo' or n.startswith('ondewo.')]
#   include_package_data=True + package_data for py.typed / *.pyi
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["ondewo", "ondewo.*"]

[tool.setuptools.package-data]
"ondewo.nlu" = ["py.typed", "*.pyi"]
"ondewo.qa" = ["py.typed", "*.pyi"]

# ---------------------------------------------------------------------------
# Coverage
#
# `source` (not a list of dotted --cov=module args) is deliberate and load-bearing.
# pytest-cov's dotted form only measures modules that the suite actually IMPORTS: a module
# nobody imports is silently DROPPED from the report instead of scoring 0%, so the
# --cov-fail-under gate FAILS OPEN — it happily reports "100% reached" while whole files have
# zero tests. `source` is filesystem-scanned, so every .py under ondewo/ is measured whether
# or not a test touches it, and an untested file shows up as 0% and fails the gate.
#
# Consequence to respect: anything genuinely not worth testing must be justified in `omit`
# below rather than left to vanish by accident.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["ondewo"]
omit = [
    # Generated protobuf/gRPC stubs (protoc + mypy-protobuf output, ~95% of the repo).
    # Not our code, regenerated by `make generate_ondewo_protos`. The .pyi stubs alongside
    # them are not executable Python and are never measured by coverage in the first place.
    "ondewo/*/*_pb2.py",
    "ondewo/*/*_pb2_grpc.py",
    # Auto-generated by ondewo/nlu/scripts/generate_services.py + the perl rewrites in
    # Makefile:157-163. Every method is a one-line delegation to a gRPC stub, so a test could
    # only assert that a mocked stub returns its own mock -> tautological. The generator that
    # emits them IS covered (tests/unit/scripts/test_generate_services.py), and the wiring of
    # the generated classes IS covered (tests/unit/core/test_client_wiring.py), which is where
    # the real risk lives.
    "ondewo/nlu/services/*.py",
    # Same thin stub-delegation shape as the nlu services above, so testing them is equally
    # tautological. NOTE: unlike the nlu ones these are hand-written, not generated —
    # generate_services.py and the Makefile only ever target ondewo/nlu/services.
    "ondewo/qa/services/*.py",
    # Deprecated demo script: the whole body sits under `if __name__ == "__main__"`, reads a
    # config file from disk and connects to a live NLU server. Nothing importable to assert on.
    "ondewo/nlu/scripts/client_example_script.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Re-state the default: setting exclude_lines REPLACES coverage's built-in pragma pattern.
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# ---------------------------------------------------------------------------
# Ruff  (replaces flake8: ignore C901,W504; max-line-length 120; exclude *_pb2*)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py39"
# Never lint/format the generated protobuf/gRPC stubs (the old .flake8 excluded
# every ondewo/**/*_pb2*.py / .pyi individually).
extend-exclude = [
    "*_pb2.py",
    "*_pb2.pyi",
    "*_pb2_grpc.py",
    "ondewo-nlu-api",
    "ondewo-proto-compiler",
]

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F) == the flake8 default rule set.
# C901 (mccabe complexity) is intentionally NOT enabled -> old "ignore = C901".
# W503/W504 (line break around binary operator) are not implemented by ruff,
# so the old "ignore = W504" is a no-op here.
select = ["E", "F", "W"]
ignore = []

[tool.ruff.format]
# Supersedes the old black (async_ files) + autopep8 hooks.
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy  (translated faithfully from mypy.ini)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_errors = false
ignore_missing_imports = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_traceback = true
warn_no_return = true
warn_return_any = true
warn_unused_configs = true
# The examples share `examples/example_env.py`, which they import after putting `examples/` on
# sys.path at runtime. mypy cannot follow that, so tell it where to look — otherwise every example
# fails the pre-commit hook with `Cannot find implementation or library stub for "example_env"`.
mypy_path = "examples"

# Generated protobuf / gRPC stubs: never type-check them.
[[tool.mypy.overrides]]
module = [
    "ondewo.nlu.agent_pb2",
    "ondewo.nlu.agent_pb2_grpc",
    "ondewo.nlu.aiservices_pb2",
    "ondewo.nlu.aiservices_pb2_grpc",
    "ondewo.nlu.ccai_project_pb2",
    "ondewo.nlu.ccai_project_pb2_grpc",
    "ondewo.nlu.common_pb2",
    "ondewo.nlu.common_pb2_grpc",
    "ondewo.nlu.context_pb2",
    "ondewo.nlu.context_pb2_grpc",
    "ondewo.nlu.entity_type_pb2",
    "ondewo.nlu.entity_type_pb2_grpc",
    "ondewo.nlu.intent_pb2",
    "ondewo.nlu.intent_pb2_grpc",
    "ondewo.nlu.llm_evaluation_pb2",
    "ondewo.nlu.llm_evaluation_pb2_grpc",
    "ondewo.nlu.operation_metadata_pb2",
    "ondewo.nlu.operation_metadata_pb2_grpc",
    "ondewo.nlu.operations_pb2",
    "ondewo.nlu.operations_pb2_grpc",
    "ondewo.nlu.project_role_pb2",
    "ondewo.nlu.project_role_pb2_grpc",
    "ondewo.nlu.project_statistics_pb2",
    "ondewo.nlu.project_statistics_pb2_grpc",
    "ondewo.nlu.rag_pb2",
    "ondewo.nlu.rag_pb2_grpc",
    "ondewo.nlu.server_statistics_pb2",
    "ondewo.nlu.server_statistics_pb2_grpc",
    "ondewo.nlu.session_pb2",
    "ondewo.nlu.session_pb2_grpc",
    "ondewo.nlu.user_pb2",
    "ondewo.nlu.user_pb2_grpc",
    "ondewo.nlu.utility_pb2",
    "ondewo.nlu.utility_pb2_grpc",
    "ondewo.nlu.webhook_pb2",
    "ondewo.nlu.webhook_pb2_grpc",
    "ondewo.qa.qa_pb2",
    "ondewo.qa.qa_pb2_grpc",
]
ignore_errors = true
ignore_missing_imports = true

# Third-party packages without (complete) type stubs.
#
# `faker.*`, `polling.*` and `tqdm.*` are imported only from `examples/`, so a narrower run
# (`mypy ondewo tests`) reports them as unused sections under `warn_unused_configs`. They are
# live — verify against the union scope `mypy ondewo tests examples` before removing any entry.
[[tool.mypy.overrides]]
module = [
    "loguru.*",
    "ondewo.utils.*",
    "faker.*",
    "google.protobuf.*",
    "grpc.*",
    "polling.*",
    "tqdm.*",
]
ignore_missing_imports = true
